# Ysera

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
cmake/: 3rdlibs.cmake  vulkan.cmake
renderer/: CMakeLists.txt
renderer/include/: context.hpp  dllexport.hpp  manager.hpp
renderer/include/base/: configuration.hpp  utils.hpp
renderer/include/basic/: device.hpp  swapchain.hpp
renderer/include/core/: log.hpp  window.hpp
renderer/src/: context.cpp  manager.cpp
renderer/src/base/: utils.cpp
renderer/src/basic/: device.cpp  swapchain.cpp
renderer/src/core/: log.cpp  window.cpp
sandbox/: CMakeLists.txt  main.cpp
